
	* device/include/string.h,
	  device/lib/_strcpy.c,
	  device/lib/stm8/Makefile.in,
	  device/lib/z80/Makefile.in,
	  device/lib/stm8/_divulong.s,
	  device/lib/stm8/_modulong.s,
	  device/lib/stm8/_mullong.s,
	  device/lib/stm8/memcpy.s,
	  device/lib/stm8/strcmp.s,
	  device/lib/stm8/strcpy.s,
	  device/lib/z80/memmove.s,
	  device/lib/z80/strcpy.s,
	  device/lib/z80/strlen.s:
	  Replace some backend-specific functions in stm8 and z80 librtaries by generic ones.

2017-10-08 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2663.c:
	  Disable new function pointer test for ds390.
	* src/SDCCsymt.c,
	  src/SDCCerr.h,
	  src/SDCCerr.c:
	  Improve error reporting for conflicting function declarations.
	* src/SDCCast.c,
	  support/regression,tests/bug-2556.c:
	  Fix bug #2556.

2017-10-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.c,
	  src/SDCCglue.c:
	  Fix bug #2641.

2017-10-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCval.c,
	  support/regression/tests/generic.c:
	  Fix string literal signedness to match char.
	* src/SDCCsymt.c,
	  support/regression/tests/bug-2663.c:
	  Partial fix for bug #2663.

2017-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp:
	  Make source compilable with MSVC++ 2015.

2017-10-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: fix bug #2662 (omit debug info on dry run)

2017-10-02 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/cvu_play_music.c,
	  support/regression/tests/io.c:
	  Improve coverage of z80 peephole rules.
	* src/SDCCicode.c:
	  Improve debug info for ENDFUNCTION iCode, patch by Åke Rehnman.
	* src/z80/peeph-tlcs90.def:
	  Remove obsolete tlcs90 peephole rules.
	* src/z80/peeph-gbz80.def:
	  Remove obsolete gbz80 peephole rules.

2017-10-01 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr80501.c,
	  support/regression/tests/gcc-torture-execute-pr81555.c: