@@ -84,11 +84,7 @@ inline void *aligned_alloc(size_t alignment, size_t size)
 
 extern void free (void * ptr);
 
-#if defined(__SDCC_z80) || defined(__SDCC_z180) || defined(__SDCC_r2k) || defined(__SDCC_r3ka) || defined(__SDCC_tlcs90)
-int abs(int j) __preserves_regs(b, c, iyl, iyh);
-#else
 int abs(int j);
-#endif
 long int labs(long int j);
 
 /* C99 Multibyte/wide character conversion functions (ISO C 11 7.22.7) */
